Minor refactoring of unsued methods and variables.